# aws_reporting_local_POC

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
artifacts/current/: run_history.json  summary.json  top_sites.json
dashboards/dlq_operations/: dashboard.json
dashboards/pipeline_health/: dashboard.json
dashboards/sent_to_udm/: dashboard.json
data/: .gitignore  generate_fixtures.py
docs/: claude-startup-guide.html  claude-startup-guide.md  dashboard_platform_upgrade_roadmap.md  json-contracts.md
docs/architecture/: artifact-layout.md  portal-routing.md  system-architecture-contract.md
docs/demo/: demo-scenarios.md
docs/guides/: add-dashboard.md  widget-library.md
docs/plans/: add_artifact_versioning_plan.md  add_dashboard_plugin_architecture_plan.md  add_pipeline_health_dashboard_plan.md  add_publisher_cli_plan.md  add_reporting_artifacts_plan.md  add_system_health_banner_plan.md  ai_run_to_run_anomaly_analysis_plan.md  apply_cashmere_theme_plan.md  artifact_file_serving_expansion_plan.md  automated_run_health_classification_plan.md  blank_screen_troubleshooting_plan.md  bootstrap_client_scope_command_plan.md  client_environment_selector_ui_plan.md  commercial_dashboard_ui_polish_plan.md  commercial_ui_polish_plan.md  dashboard_creation_workflow_plan.md  dashboard_definition_schema_plan.md  dashboard_drag_layout_plan.md  dashboard_layout_persistence_plan.md  dashboard_navigation_plan.md  (+28 more)
portal/: index.html  package-lock.json  package.json  vite.config.js
scripts/: generate_demo_data.py
sql/: athena_views.sql
(+262 files in other folders)
