[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-reporting-publisher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10.0",
    "pyarrow>=14.0.0",
    "jsonschema>=4.21.0",
]

[project.scripts]
publisher = "publisher.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
